# django_auth_service

./: .gitignore  .python-version  CHANGELOG.md  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
src/: db.sqlite3  manage.py
src/auth_project/: asgi.py  settings.py  urls.py  wsgi.py
src/auth_project/settings/: __init__.py  base.py  development.py  production.py  testing.py
src/settings/: base.py  development.py  production.py
src/users/: models.py  permissions.py  serializers.py  views.py
src/users/migrations/: 0001_initial.py  0002_customuser_otp.py
tests/users/: test_authentication.py
users/: permissions.py  views.py
